Hiding UI elements based on authorization

--- a/src/WebListenerTest/Views/Shared/_Layout.cshtml
+++ b/src/WebListenerTest/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using WebListenerTest.Auth
+@inject IAuthorizationHelper authHelper
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -31,8 +34,16 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Marketing">Marketing</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Finance">Finance</a></li>
+
+                    @if (await authHelper.IsMarketing(User))
+                    {
+                        <li><a asp-area="" asp-controller="Home" asp-action="Marketing">Marketing</a></li>
+                    }
+                    @if (await authHelper.IsFinance(User))
+                    {
+                        <li><a asp-area="" asp-controller="Home" asp-action="Finance">Finance</a></li>
+                    }
+                    
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
